--- a/index.html
+++ b/index.html
@@ -7,19 +7,18 @@
   <meta name="color-scheme" content="dark light">
   <title>Сложно сосредоточиться</title>
   
-  <!-- Шрифты -->
+
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@400;700&display=swap" rel="stylesheet">
-  
-  <!-- Глобальные стили -->
+  <link href="fonts/fonts.css">
+
   <link rel="stylesheet" href="./styles/globals.css">
   <link rel="stylesheet" href="./styles/variables.css">
   <link rel="stylesheet" href="./styles/style.css">
   <link rel="stylesheet" href="./styles/dark.css">
   <link rel="stylesheet" href="./styles/light.css">
   
-  <!-- Иконки -->
   <link rel="icon" href="./images/favicon.ico" sizes="any">
   <link rel="icon" href="./images/icon.svg" type="image/svg+xml">
   <link rel="apple-touch-icon" href="./images/apple-touch-icon.png">
@@ -74,7 +73,7 @@
             <article class="card">
               <h3 class="card__title title-decor">Дофамин</h3>
               <p class="card__text">
-                С гормонами стресса всё понятно, но дальше — ещё интереснее. В нашей невозможности сосредоточиться замешана и полная противоположность стрессу — дофамин. Это вещество участвует в <a href="#" class="link">системе вознаграждения</a> мозга. Причём тут он? Мы часто отвлекаемся от важной задачи на что-то более «приятное» для мозгов. Например, смотрим <a href="#" class="link">лайки в соцсетях</a>. В это время и выделяется дофамин — и мы чувствуем удовольствие. Получается замкнутый круг: чем больше отвлекаешься, тем больше удовольствия получаешь.
+                С гормонами стресса всё понятно, но дальше — ещё интереснее. В нашей невозможности сосредоточиться замешана и полная противоположность стрессу — дофамин. Это вещество участвует в системе вознаграждения мозга. Причём тут он? Мы часто отвлекаемся от важной задачи на что-то более «приятное» для мозгов. Например, смотрим лайки в соцсетях. В это время и выделяется дофамин — и мы чувствуем удовольствие. Получается замкнутый круг: чем больше отвлекаешься, тем больше удовольствия получаешь.
               </p>
             </article>
           </div>
@@ -83,7 +82,7 @@
 
       <section class="section">
         <h2 class="section__title">Что снижает концентрацию внимания?</h2>
-        <div class="section__content section__content--multi-column">
+        <div class="section__content section__content--card-column">
           <article class="card">
             <h3 class="card__title title-decor">Стресс</h3>
             <p class="card__text">
