--- a/index.html
+++ b/index.html
@@ -7,11 +7,10 @@
   <meta name="color-scheme" content="dark light">
   <title>Сложно сосредоточиться</title>
   
-
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@400;700&display=swap" rel="stylesheet">
-  <link href="fonts/fonts.css">
+  <link rel="stylesheet" href="fonts/fonts.css">
 
   <link rel="stylesheet" href="./styles/globals.css">
   <link rel="stylesheet" href="./styles/variables.css">
@@ -29,7 +28,7 @@
       <nav class="header__theme-menu">
         <ul class="header__theme-menu-list">
           <li class="header__theme-menu-item">
-            <button class="header__theme-menu-button" data-theme="light">
+            <button class="header__theme-menu-button header__theme-menu-button_type_light" data-theme="light">
               День
             </button>
           </li>
@@ -39,7 +38,7 @@
             </button>
           </li>
           <li class="header__theme-menu-item">
-            <button class="header__theme-menu-button" data-theme="dark">
+            <button class="header__theme-menu-button header__theme-menu-button_type_dark" data-theme="dark">
               Неон
             </button>
           </li>
