--- a/index.html
+++ b/index.html
@@ -55,27 +55,27 @@
     </header>
     
     <main class="content">
-      <section class="section section--compact">
-        <h2 class="section__title">
+      <section class="why content-section content__section">
+        <h2 class="content-section__title">
           Почему сосредоточиться так сложно
         </h2>
-        <div class="section__content section__content--decorated">
-          <div class="section__decor"></div>
-          <div class="section__main-content">
-            <article class="card">
-              <h3 class="card__title title-decor">Многозадачность</h3>
-              <p class="card__text">
+        <div class="text-blocks">
+          <article class="text-block">
+            <h3 class="text-block__heading title-decor">Многозадачность</h3>
+            <div class="text-block__main-content">
+              <p class="text-block__paragraph">
                 Особенно сложно сосредоточиться, когда задач много и все они — важные. Где же легендарная многозадачность, когда она так нужна вам (и всем нанимающим менеджерам этого мира)? А дело в том, что её просто не существует. Исследователи <a href="#" class="link">выяснили</a>, что мозгу тяжело концентрироваться даже на двух делах одновременно. А когда в поле внимания попадает несколько важных задач, организм паникует и выделяет кортизол и адреналин — «гормоны стресса». Из-за этого мы работаем невнимательно: ошибаемся и быстро устаём.
               </p>
-            </article>
-            
-            <article class="card">
-              <h3 class="card__title title-decor">Дофамин</h3>
-              <p class="card__text">
+            </div>
+          </article>
+          <article class="text-block">
+            <h3 class="text-block__heading title-decor">Дофамин</h3>
+            <div class="text-block__main-content">
+              <p class="text-block__paragraph">
                 С гормонами стресса всё понятно, но дальше — ещё интереснее. В нашей невозможности сосредоточиться замешана и полная противоположность стрессу — дофамин. Это вещество участвует в системе вознаграждения мозга. Причём тут он? Мы часто отвлекаемся от важной задачи на что-то более «приятное» для мозгов. Например, смотрим лайки в соцсетях. В это время и выделяется дофамин — и мы чувствуем удовольствие. Получается замкнутый круг: чем больше отвлекаешься, тем больше удовольствия получаешь.
               </p>
-            </article>
-          </div>
+            </div>
+          </article>
         </div>
       </section>
 
