--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         <h2 class="content-section__title">Что снижает концентрацию внимания?</h2>
         <div class="content-section__body content-section__body--card-column">
           <article class="text-card">
-            <h3 class="text-card__title title-decor">Стресс</h3>
+            <h3 class="text-card__title title-decor">Многозадачность</h3>
             <p class="text-card__paragraph">
               Как концентрация может снижаться из-за... концентрации? Любая стрессовая ситуация (и резко меняющийся мир в целом) заставляет наш мозг постоянно «сканировать» окружающую среду на предмет опасности. Например, читать новости вместо работы. Но быть собранными всё время — невозможно. Концентрация — мышца, и она может не выдержать, если не давать ей отдохнуть.
             </p>
@@ -99,7 +99,7 @@
           <article class="text-card">
             <h3 class="text-card__title title-decor">Гаджеты</h3>
             <p class="text-card__paragraph">
-              Да-да, это та самая ситуация, когда на экране ноутбука — код, в наушниках — подкаст, а на компьютере фоном — ещё и видео с забавными утятами. В результате мозг пытается переключиться с одной задача на другую — и просто не может. А чтобы вернуться к состоянию полной концентрации, человеку в средном нужно 20 минут. Вот и получается, что чем больше времени мы проводим в гаджетах, тем больше времени затем нужно, чтобы вернуться к работе.
+              Да-да, это та самая ситуация, когда на экране ноутбука — код, в наушниках — подкаст, а на компьютере фоном — ещё и видео с забавными утятами. В результате мозг пытается переключиться с одной задача на другую — и просто не может. А чтобы вернуться к состоянию полной концентрации, человеку в среднем нужно 20 минут. Вот и получается, что чем больше времени мы проводим в гаджетах, тем больше времени затем нужно, чтобы вернуться к работе.
             </p>
           </article>
         </div>
