--- a/index.html
+++ b/index.html
@@ -135,6 +135,7 @@
             <p class="text-card__paragraph">Настоящие бумажные книги. Это правда помогает с концентрацией: чтобы прочитать пост в соцсетях, достаточно нескольких минут или даже секунд. А вот интересная книга способна затянуть на несколько часов и отлично тренирует направленное внимание.</p>
           </article>
         </div>
+      </div>
       </section>
 
       <section class="gallery">
