--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     
     <main class="content">
       <section class="content-section content-section--why">
-        <h2 class="content-section__title">
+        <h2 class="content-section__title content-section__title--why">
           Почему сосредоточиться так сложно
         </h2>
         <div class="content-section__body">
@@ -80,7 +80,9 @@
       </section>
 
       <section class="content-section content-section--factors">
-        <h2 class="content-section__title">Что снижает концентрацию внимания?</h2>
+          <h2 class="content-section__title content-section__title--factors">
+            Что снижает концентрацию внимания?
+          </h2>
         <div class="content-section__body content-section__body--card-column">
           <article class="text-card">
             <h3 class="text-card__title title-decor">Многозадачность</h3>
@@ -139,7 +141,9 @@
       </section>
 
       <section class="gallery">
-        <h2 class="gallery__title title-decor">А можно в картинках?</h2>
+        <h2 class="gallery__title title-decor gallery__title--custom">
+    А можно в картинках?
+        </h2>
         <div class="gallery__grid">
           <img src="./images/sunset.png" alt="Закат" class="gallery__image" loading="lazy">
           <img src="./images/ice-cream.png" alt="Мороженое" class="gallery__image" loading="lazy">
@@ -150,7 +154,7 @@
       </section>
     </main>
     
-    <footer class="footer decorated-zone">
+    <footer class="footer decorated-zone footer-decorated">
       <h2 class="footer__title">focus</h2>
     </footer>
   </div>
