--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         </h2>
         <div class="content-section__body">
           <article class="text-card">
-            <h3 class="text-card__title title-decor">Многозадачность</h3>
+            <h3 class="text-card__title title-decor why-title">Многозадачность</h3>
             <div class="text-card__content">
               <p class="text-card__paragraph">
                 Особенно сложно сосредоточиться, когда задач много и все они — важные. Где же легендарная многозадачность, когда она так нужна вам (и всем нанимающим менеджерам этого мира)? А дело в том, что её просто не существует. Исследователи выяснили, что мозгу тяжело концентрироваться даже на двух делах одновременно. А когда в поле внимания попадает несколько важных задач, организм паникует и выделяет кортизол и адреналин — «гормоны стресса». Из-за этого мы работаем невнимательно: ошибаемся и быстро устаём.
@@ -80,27 +80,27 @@
       </section>
 
       <section class="content-section content-section--factors">
-          <h2 class="content-section__title content-section__title--factors">
-            Что снижает концентрацию внимания?
-          </h2>
+        <h2 class="content-section__title content-section__title--factors">
+          Что снижает концентрацию внимания?
+        </h2>
         <div class="content-section__body content-section__body--card-column">
           <article class="text-card">
-            <h3 class="text-card__title title-decor">Многозадачность</h3>
-            <p class="text-card__paragraph">
+            <h3 class="text-card__title title-decor factor-title">Многозадачность</h3>
+            <p class="text-card__paragraph factor-text">
               Как концентрация может снижаться из-за... концентрации? Любая стрессовая ситуация (и резко меняющийся мир в целом) заставляет наш мозг постоянно «сканировать» окружающую среду на предмет опасности. Например, читать новости вместо работы. Но быть собранными всё время — невозможно. Концентрация — мышца, и она может не выдержать, если не давать ей отдохнуть.
             </p>
           </article>
           
           <article class="text-card">
-            <h3 class="text-card__title title-decor">Еда</h3>
-            <p class="text-card__paragraph">
+            <h3 class="text-card__title title-decor factor-title">Еда</h3>
+            <p class="text-card__paragraph factor-text">
               «Быстрые углеводы» — сахар, белый хлеб, сладости — молниеносно доставляют в мозг энергию и помогают ему лучше работать. Но уходит эта энергия также быстро, как и приходит. А мы в результате попадаем на «углеводные качели»: как только действие «быстрых углеводов» заканчивается, мы чувствуем усталость и сонливость. И хотим ещё больше быстрых углеводов.
             </p>
           </article>
           
           <article class="text-card">
-            <h3 class="text-card__title title-decor">Гаджеты</h3>
-            <p class="text-card__paragraph">
+            <h3 class="text-card__title title-decor factor-title">Гаджеты</h3>
+            <p class="text-card__paragraph factor-text">
               Да-да, это та самая ситуация, когда на экране ноутбука — код, в наушниках — подкаст, а на компьютере фоном — ещё и видео с забавными утятами. В результате мозг пытается переключиться с одной задача на другую — и просто не может. А чтобы вернуться к состоянию полной концентрации, человеку в среднем нужно 20 минут. Вот и получается, что чем больше времени мы проводим в гаджетах, тем больше времени затем нужно, чтобы вернуться к работе.
             </p>
           </article>
@@ -141,8 +141,8 @@
       </section>
 
       <section class="gallery">
-        <h2 class="gallery__title title-decor gallery__title--custom">
-    А можно в картинках?
+        <h2 class="gallery__title title-decor gallery-title-custom">
+          А можно в картинках?
         </h2>
         <div class="gallery__grid">
           <img src="./images/sunset.png" alt="Закат" class="gallery__image" loading="lazy">
